java-app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-app
  labels:
    app: my-java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-java-app
  template:
    metadata:
      labels:
        app: my-java-app
    spec:
      containers:
        - name: myjava-app
          image: jaykay84/java-app:mysqldb
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
