java-app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-java-app-service
  labels:
    app: my-java-app-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: my-java-app
