mysql_headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-service
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    statefulset.kubernetes.io/pod-name: mysql-0
