phpmyadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin-service
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  selector:
    app: phpmyadmin
