java-app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app
spec:
spec:
  ingressClassName: nginx
  rules:
  - host: my-java-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-java-app-service
            port:
              number: 8080
